# LLM-KG

./: .gitignore  README.md  docker-compose.yml  llm_kg.toml.example  pyproject.toml
config/: settings.py
config/prompts/: answer_basic.md  answer_local.md  chunk_summary.md  extract_claims.md  extract_entities.md  extract_relations.md  generate_wiki_page.md  ingest.md  repair_graph.md  summarize_source.md
migrations/: 001_init_pgvector.sql  002_evidence_governance.sql  003_reasoning_ontology.sql  004_pdf_ocr_provenance.sql
src/llm_kg/: __init__.py  __main__.py  api.py  cli.py
src/llm_kg/config/: __init__.py  settings.py
src/llm_kg/embeddings/: __init__.py  factory.py  mock_client.py  openai_client.py  protocol.py
src/llm_kg/governance/: __init__.py  service.py
src/llm_kg/llm/: __init__.py  extraction_models.py  factory.py  mock_client.py  openai_client.py  protocol.py
src/llm_kg/models/: __init__.py  core.py
src/llm_kg/ontology/: __init__.py  registry.py
src/llm_kg/pipeline/: __init__.py  chunking.py  ingest.py  lint.py
src/llm_kg/prompts/: __init__.py  loader.py
src/llm_kg/readers/: __init__.py  common.py  dispatch.py  docx_reader.py  markdown_reader.py  pdf_reader.py  text_reader.py
src/llm_kg/reasoning/: __init__.py  (+2 more)
tests/: test_chunking.py  test_cli_governance.py  test_cross_validation.py  test_embeddings.py  test_governance.py  test_lint.py  test_migration_sql.py  test_ontology_reasoning.py  test_openai_structured_extraction.py  test_pipeline.py  test_postgres_store.py  test_prompts.py  test_readers.py  test_settings.py  test_storage.py
(+10 files in other folders)
