[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-kg"
version = "0.1.0"
description = "LLM Wiki to LLM Knowledge Graph MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "python-docx>=1.1",
  "pypdf>=4.0",
  "openai>=1.0",
  "pymupdf>=1.24",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
llm-kg = "llm_kg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
